--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,56 @@
+
 html {
     font-family: system-ui, -apple-system,
     "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans",
     "Liberation Sans", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.nav {
+    background-color: #113343;
+    height: 4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-brand {
+    display: block;
+    color: white;
+    text-decoration: none;
+    height: 4rem;
+    line-height: 4rem;
+}
+
+.nav-brand-image {
+    height: 4rem;
+    width: 3rem;
+    vertical-align: bottom;
+    color: #71b68a;
+}
+
+.nav-brand:hover .nav-brand-image {
+    color: #8ed8a9;
+}
+
+.button {
+    display: inline-block;
+    background-color: #f35a39;
+    color: white;
+    text-decoration: none;
+    padding: 0  1rem;
+    line-height: 2.5rem;
+    border-radius: 0.5rem;
+    /*text-transform: uppercase;*/
+}
+.button:hover {
+    background-color: #d95032;
+}
+
+.button__icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    position: relative;
+    top: 0.4rem;
+    margin-right: 0.4rem;
 }
