--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,25 @@
+* {
+    box-sizing: border-box;
+}
 
 html {
+
     font-family: system-ui, -apple-system,
     "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans",
     "Liberation Sans", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+body {
+    min-height: 400vh;
+}
+
 .nav {
     background-color: #113343;
     height: 4rem;
+}
+
+.nav__layout {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,11 +49,12 @@ html {
     background-color: #f35a39;
     color: white;
     text-decoration: none;
-    padding: 0  1rem;
+    padding: 0 1rem;
     line-height: 2.5rem;
     border-radius: 0.5rem;
-    /*text-transform: uppercase;*/
+    border: none;
 }
+
 .button:hover {
     background-color: #d95032;
 }
@@ -53,4 +65,263 @@ html {
     position: relative;
     top: 0.4rem;
     margin-right: 0.4rem;
+}
+
+.main {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 2rem;
+}
+
+.main::before, .main::after {
+    min-height: 100rem;
+    position: absolute;
+    content: "";
+    display: block;
+    width: 10rem;
+    top: -1rem;
+    bottom: -1rem;
+    background-image: url("../images/bg-lines.svg");
+    background-size: cover;
+    z-index: -1;
+    background-position: right center;
+    opacity: 0.1;
+}
+
+.main::before {
+
+    left: 0;
+}
+
+.main::after {
+
+    right: 0;
+    transform: scaleX(-1);
+}
+
+
+.main-heading {
+    text-transform: uppercase;
+    text-align: center;
+    color: #113343;
+    font-size: 2.5rem;
+    letter-spacing: 0.25em;
+    margin-top: 0;
+    padding-top: 0.67em;
+}
+
+.container {
+    width: 100%;
+    padding: 0 1rem;
+    margin: 0 auto;
+}
+
+@media (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 960px;
+        padding-left: 4rem;
+        padding-right: 4rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1140px;
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+}
+
+@media (min-width: 1400px) {
+    .container {
+        max-width: 1320px;
+    }
+}
+
+.card {
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    background-color: #f3f4f5;
+    padding: 0;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 768px) {
+    .card {
+        flex-direction: row;
+    }
+}
+
+.card__heading {
+    margin: 0;
+}
+
+.card__desc-container {
+    padding: 0 1rem 1rem 1rem;
+}
+
+.card__image {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 20rem;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+
+}
+
+@media (min-width: 768px) {
+    .card__image {
+        width: 20rem;
+        height: 2rem;
+        min-height: 100%;
+        box-shadow: 0.25rem 0 0.5rem rgba(0, 0, 0, 0.1);
+    }
+}
+
+.card__desc-time {
+    color: #328677;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+}
+
+.card__heading {
+    color: #113343;
+    font-size: 1.75rem;
+}
+
+.card__heading::after {
+    content: "";
+    display: block;
+    height: 0.125rem;
+    width: 6rem;
+    background-color: #328677;
+    margin: 1rem 0;
+
+}
+
+.card__paragraph {
+    color: #113343;
+    line-height: 1.33rem;
+    font-size: 1rem;
+}
+
+.pagination {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    justify-content: flex-end;
+
+}
+
+.pagination__link {
+    display: inline-block;
+    color: #113343;
+    border: rgb(200, 200, 200) solid 0.125rem;
+    width: 2rem;
+    height: 2rem;
+    text-decoration: none;
+    text-align: center;
+    line-height: 1.75rem;
+    margin-left: 0.5rem;
+    border-radius: 0.5rem;
+    background-color: white;
+}
+
+.pagination__link:hover {
+    background-color: #328677;
+    border: #328677 solid 0.125rem;
+    color: white;
+}
+
+.pagination__li--active {
+    border: #328677 solid 0.125rem;
+    color: #328677;
+}
+
+.footer {
+    background-color: #113343;
+    padding: 3rem 0;
+}
+.footer::after {
+    content: "";
+    display: block;
+    height: 0.125rem;
+    width: 7.5rem;
+    background-color: white;
+    opacity: 0.5;
+    margin: 2.5rem auto 0;
+}
+.footer__heading{
+    color: white;
+}
+.footer__desc{
+    color: #8ed8a9;
+    max-width: 20rem;
+    line-height: 1.33em;
+}
+
+.form-group{
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.form-group__label,.form-group__input{
+    display: block;
+    color: #113343;
+    background-color: rgb(200, 200, 200);
+    border-style: solid;
+    border-color: rgb(100,100,100);
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+
+}
+
+.form-group__label{
+    text-transform: uppercase;
+    flex: 0 0 10rem;
+    border-top-width: 0.125rem;
+    border-left-width: 0.125rem;
+    border-bottom-width: 0.125rem;
+    border-right-width: 0;
+    border-top-left-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+
+}
+.form-group__input {
+    flex: 1 0 7.5rem;
+    border-top-width: 0.125rem;
+    border-right-width: 0.125rem;
+    border-bottom-width: 0.125rem;
+    border-left-width: 0;
+    border-top-right-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+
+}
+.form-group__input:focus {
+    outline:none;
+
+}
+.form-submit{
+    display: flex;
+    justify-content: flex-end;
 }
